--- a/src/app/components/comida/categoria/categoria.component.html
+++ b/src/app/components/comida/categoria/categoria.component.html
@@ -51,7 +51,7 @@
                     </tr>
                 </tbody>
             </table>
-            <div class="row" *ngIf="cargando">
+            <div class="row" *ngIf="!cargando">
                 <div class="col" style="text-align: center;">
                     <h6><i class="fa fa-spinner fa-pulse"></i><br> Cargando
                     </h6>
