--- a/src/app/components/comida/categoria-actualizar/categoria-actualizar.component.html
+++ b/src/app/components/comida/categoria-actualizar/categoria-actualizar.component.html
@@ -6,7 +6,7 @@
         <form (ngSubmit)="actualizarCategoria()" #forma="ngForm" encType="multipart/form-data">
             <div class="form-group">
                 <label>Categoria</label>
-                <input [ngClass]="{'is-invalid': strNombre.errors?.required && forma.controls['strPregunta'].touched }" class="form-control form-control-sm" type="text" placeholder="Ingrese nombre" name="strNombre" [(ngModel)]="categoria.strNombre" required #strNombre="ngModel">
+                <input [ngClass]="{'is-invalid': strNombre.errors?.required && forma.controls['strNombre'].touched }" class="form-control form-control-sm" type="text" placeholder="Ingrese nombre" name="strNombre" [(ngModel)]="categoria.strNombre" required #strNombre="ngModel">
                 <div class="invalid-feedback" *ngIf="strNombre.errors?.required">
                     Ingrese un nombre de categoria
                 </div>
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <select [ngClass]="{'is-invalid': activo.errors?.required && forma.controls['activo'].touched}" data-style="btn" class="form-control form-control-sm" name="tipo" [(ngModel)]="categoria.blnActivo" #activo="ngModel" type="text" required>
+                <select [ngClass]="{'is-invalid': activo.errors?.required && forma.controls['activo'].touched}" data-style="btn" class="form-control form-control-sm" name="activo" [(ngModel)]="categoria.blnActivo" #activo="ngModel" type="text" required>
                     <option [ngValue]="undefined" selected >Estatus</option>
                     <option [ngValue]="true">Activa</option>
                     <option [ngValue]="false">Inactiva</option>
@@ -28,10 +28,9 @@
                     Seleccione una opción.
                 </div>
             </div>
-
-
-            <ul class=" list-inline text-right ">
-                <li class=list-inline-item><button type="submit" [disabled]="forma.invalid" class="btn btn-outline-info btn-sm ">Agregar</button></li>
+            <ul class="list-inline text-right ">
+                <li class=list-inline-item><button class="btn btn-outline-danger btn-sm" (click)="cancelar()">Cancelar</button></li>
+                <li class=list-inline-item><button type="submit" [disabled]="forma.invalid" class="btn btn-outline-info btn-sm ">Actualizar</button></li>
             </ul>
         </form>
     </div>
