--- a/src/app/components/comida/categoria-registrar/categoria-registrar.component.html
+++ b/src/app/components/comida/categoria-registrar/categoria-registrar.component.html
@@ -6,7 +6,7 @@
         <form (ngSubmit)="registrarCategoria()" #forma="ngForm" encType="multipart/form-data">
             <div class="form-group">
                 <label>Categoria</label>
-                <input [ngClass]="{'is-invalid': strNombre.errors?.required && forma.controls['strPregunta'].touched }" class="form-control form-control-sm" type="text" placeholder="Ingrese nombre" name="strNombre" [(ngModel)]="categoria.strNombre" required #strNombre="ngModel">
+                <input [ngClass]="{'is-invalid': strNombre.errors?.required && forma.controls['strNombre'].touched }" class="form-control form-control-sm" type="text" placeholder="Ingrese nombre" name="strNombre" [(ngModel)]="categoria.strNombre" required #strNombre="ngModel">
                 <div class="invalid-feedback" *ngIf="strNombre.errors?.required">
                     Ingrese un nombre de categoria
                 </div>
@@ -19,12 +19,12 @@
                 </div>
             </div>
             <div class="form-group">
-                <select [ngClass]="{'is-invalid': activo.errors?.required && forma.controls['activo'].touched}" data-style="btn" class="form-control form-control-sm" name="tipo" [(ngModel)]="categoria.blnActivo" #activo="ngModel" type="text" required>
+                <select [ngClass]="{'is-invalid': blnActivo.errors?.required && forma.controls['blnActivo'].touched}" data-style="btn" class="form-control form-control-sm" name="blnActivo" [(ngModel)]="categoria.blnActivo" #blnActivo="ngModel" type="text" required>
                     <option [ngValue]="undefined" selected >Estatus</option>
                     <option [ngValue]="true">Activa</option>
                     <option [ngValue]="false">Inactiva</option>
                 </select>
-                <div class="invalid-feedback" *ngIf="activo.errors?.required || forma.controls['activo']?.touched">
+                <div class="invalid-feedback" *ngIf="blnActivo.errors?.required || forma.controls['activo']?.touched">
                     Seleccione una opción.
                 </div>
             </div>
