--- a/src/app/components/comida/categoria/categoria.component.html
+++ b/src/app/components/comida/categoria/categoria.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="col-2 col-md-1 mt-2">
                 <div>
-                    <button type="button" class="btn btn-info btn-sm" id="dropdown" data-toggle="dropdownID" aria-haspopup="true" aria-expanded="false"><i class="fa fa-ellipsis-h "></i>?</button>
+                    <button type="button" class="btn btn-info btn-sm" id="dropdown" data-toggle="dropdownID" aria-haspopup="true" aria-expanded="false"><i class="fa fa-ellipsis-h "></i>...</button>
                     <div class="dropdown-menu dropdown-menu-right shadow-lg " aria-labelledby="dropdownID">
                         <div class="dropdown-header"><span class="text-xs text-uppercase ">EXPORTAR</span>
                         </div>
@@ -34,11 +34,9 @@
                         <td>{{c.strDescripcion}}</td>
                         <td *ngIf="!c.blnActivo && c.blnActivo !== undefined">Inactiva</td>
                         <td *ngIf="c.blnActivo">Activa</td>
-
-
                         <td class="text-center">
                             <div class="list-inline-item">
-                                <button type="button" *ngIf="!cargando" class="btn btn-info btn-sm" id="dropdownReports" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-ellipsis-h "></i></button>
+                                <button type="button" *ngIf="!cargando" class="btn btn-info btn-sm" id="dropdownReports" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-ellipsis-h "></i>...</button>
                                 <div class="dropdown-menu dropdown-menu-left shadow-lg " aria-labelledby="dropdownReports">
                                     <div class="dropdown-header text-info "><span class="text-xs text-uppercase">OPCIONES</span>
                                     </div>
@@ -51,7 +49,7 @@
                     </tr>
                 </tbody>
             </table>
-            <div class="row" *ngIf="!cargando">
+            <div class="row" *ngIf="cargando">
                 <div class="col" style="text-align: center;">
                     <h6><i class="fa fa-spinner fa-pulse"></i><br> Cargando
                     </h6>
