--- a/src/app/components/comida/comida.component.html
+++ b/src/app/components/comida/comida.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
         <div class="col-4">
-            <app-categoria-registrar *ngIf="datos.categoriaR"></app-categoria-registrar>
-            <app-categoria-actualizar *ngIf="datos.categoriaA"></app-categoria-actualizar>
+            <app-categoria-registrar *ngIf="datos.categoriaR" [datos]=datos></app-categoria-registrar>
+            <app-categoria-actualizar *ngIf="datos.categoriaA" [datos]=datos [cat]=datos.categoriaUno></app-categoria-actualizar>
             <app-platillo-registrar *ngIf="datos.platilloA"></app-platillo-registrar>
             <app-platillo-actualizar *ngIf="datos.platilloA"></app-platillo-actualizar>
         </div>
