--- a/src/app/components/comida/platillo-registrar/platillo-registrar.component.html
+++ b/src/app/components/comida/platillo-registrar/platillo-registrar.component.html
@@ -28,6 +28,22 @@
             </div>
 
             <div class="form-group">
+                <label>Cantidad</label>
+                <input [ngClass]="{'is-invalid': strPiezas.errors?.required && forma.controls['strPiezas'].touched }" class="form-control form-control-sm" type="text" placeholder="Ingrese las piezas" name="strPiezas" [(ngModel)]="platillo.nmbPiezas" required #strPiezas="ngModel">
+                <div class="invalid-feedback" *ngIf="strPiezas.errors?.required">
+                    Ingrese las Piezas del Platillo
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label>Cantidad</label>
+                <input [ngClass]="{'is-invalid': strPrecio.errors?.required && forma.controls['strPrecio'].touched }" class="form-control form-control-sm" type="text" placeholder="Ingrese el precio" name="strPrecio" [(ngModel)]="platillo.nmbPrecio" required #strPrecio="ngModel">
+                <div class="invalid-feedback" *ngIf="strPrecio.errors?.required">
+                    Ingrese el Precio del Platillo
+                </div>
+            </div>
+
+            <div class="form-group">
                 <select [ngClass]="{'is-invalid': blnActivo.errors?.required && forma.controls['blnActivo'].touched}" data-style="btn" class="form-control form-control-sm" name="blnActivo" [(ngModel)]="platillo.blnActivo" #blnActivo="ngModel" type="text" required>
                     <option [ngValue]="undefined" selected >Estatus</option>
                     <option [ngValue]="true">Activa</option>
